# cryoet-data-portal-backend

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .release-please-manifest.json  LICENSE  Makefile  README.md  docker-compose.yml  pytest.ini  release-please-config.json
apiv2/: CHANGELOG.md  Dockerfile  Makefile  README.md  conftest.py  deployment.md  docker-compose.yml  main.py  pyproject.toml  scrape.py
apiv2/.devcontainer/: devcontainer.json
apiv2/cerbos/: config.yaml
apiv2/cerbos/policies/: alignment.yaml  annotation.yaml  annotation_author.yaml  annotation_file.yaml  annotation_method_link.yaml  annotation_shape.yaml  dataset.yaml  dataset_author.yaml  dataset_funding.yaml  deposition.yaml  deposition_author.yaml  deposition_type.yaml  derived_roles_common.yaml  entity.yaml  file.yaml  frame.yaml  frame_acquisition_file.yaml  gain_file.yaml  identified_object.yaml  per_section_alignment_parameters.yaml  per_section_parameters.yaml  run.yaml  tiltseries.yaml  tomogram.yaml  tomogram_author.yaml  tomogram_voxel_spacing.yaml
apiv2/database/migrations/: env.py  script.py.mako
apiv2/database/models/: __init__.py  alignment.py  annotation.py  annotation_author.py  annotation_file.py  annotation_method_link.py  annotation_shape.py  dataset.py  dataset_author.py  dataset_funding.py  deposition.py  deposition_author.py  deposition_type.py  frame.py  frame_acquisition_file.py  gain_file.py  identified_object.py  per_section_alignment_parameters.py  per_section_parameters.py  run.py  tiltseries.py  tomogram.py  tomogram_author.py  tomogram_voxel_spacing.py
apiv2/db_import/: README.md  db_import.py  import.py  importer.py
apiv2/db_import/common/: config.py  finders.py
apiv2/db_import/importers/: alignment.py  annotation.py  base.py  base_importer.py  dataset.py  deposition.py  frame.py  frame_acquisition_file.py  gain.py  identified_object.py  run.py  tiltseries.py  tomogram.py  voxel_spacing.py
apiv2/db_import/tests/: conftest.py  populate_db.py  test_db_alignment_import.py  test_db_annotation_import.py  test_db_dataset_import.py  test_db_deposition_import.py  test_db_run_import.py  (+5 more)
apiv2/etc/: gen_keys.sh  gunicorn_conf.py
apiv2/graphql_api/: mutations.py  queries.py  schema.graphql  schema.json
apiv2/schema/: README.md  schema.yaml
apiv2/scripts/: README.md  delete_dataset.py  scrape.py  seed.py  validate.py
apiv2/support/: enums.py  limit_offset.py
apiv2/tests/: test_aggregate_filters.py  test_aggregates.py  test_basic_queries.py  test_gql_meta_support.py  test_where_clauses.py
apiv2/validators/: alignment.py  annotation.py  annotation_author.py  annotation_file.py  annotation_method_link.py  annotation_shape.py  constraint_checked_type.py  contig.py  dataset.py  dataset_author.py  dataset_funding.py  deposition.py  deposition_author.py  deposition_type.py  entity.py  frame.py  frame_acquisition_file.py  gain_file.py  genomic_range.py  identified_object.py  immutable_type.py  kapow.py  owner.py  per_section_alignment_parameters.py  per_section_parameters.py  pet.py  run.py  sample.py  sequencing_read.py  system_writable_only_type.py  tiltseries.py  tomogram.py  tomogram_author.py  tomogram_voxel_spacing.py  upstream_database.py
ingestion_tools/: .dockerignore  Dockerfile  README.md  curation.csv  curation.tsv  docker-compose.yml  migrate.py  package.json  pyproject.toml  requirements.txt
ingestion_tools/.devcontainer/: devcontainer.json
ingestion_tools/dataset_configs/: .gitignore  10000.yaml  10001.yaml  10002.yaml  10003.yaml  10004.yaml  10005.yaml  10006.yaml  10007.yaml  10008.yaml  10009.yaml  10010.yaml  10011.yaml  10011_draft.yaml  10301.yaml  10302.yaml  10311_draft.yaml  10426.yaml  10426_ifabsent_testing.yaml  10427.yaml  10428.yaml  10429.yaml  10430.yaml  10431.yaml  10432.yaml  10433.yaml  10434.yaml  10435.yaml  10436.yaml  10436_draft.yaml  10437.yaml  10437_draft.yaml  10438.yaml  10438_draft.yaml  10439.yaml  10440.yaml  10440_draft.yaml  10441.yaml  10441_draft.yaml  10442.yaml  (+111 more)
ingestion_tools/docs/: dataset_config_validate.md  dataset_configs_intellisense.md  directory_layout.md  enqueue_runs.md  fetch_enqueue_runs_logs.md  jensen_config_generation.md  release.md  running_data_ingestion.md  running_tests.md  s3_ingestion.md  standardize_dirs.md
ingestion_tools/infra/: db_import-v0.0.1.wdl  db_import-v0.0.2.wdl  db_import_v2-v0.0.1.wdl  fix_zars.wdl-v0.0.1.wdl  schema_migrate-v0.0.1.wdl  standardize_dirs.wdl-v0.0.1.wdl  sync-v0.0.1.wdl  validate_dataset-v0.0.1.wdl  validate_dataset-v0.0.2.wdl
ingestion_tools/local_data/: README.md
ingestion_tools/scripts/: .gitignore  config-attribute-discovery.py  config_check_valid_files.py  conftest.py  dataset_config_merge.py  dataset_config_validate.py  dataset_config_validate.sh  db_import.py  db_import_new.py  dropboxtos3.py  emdbtool.py  enqueue_fix_runs.py  enqueue_runs.py  fetch_enqueue_runs_logs.py  fix_zarr_attrs.py  gjensen_config.py  migrate_folder_structure.py  mrc2omezarr.py  mrc2zarr.py  neuroglancer_util.py  refactor_annotation_sources.py  standardize_dirs.py  test_neuroglancer_config.py  tomoman_to_tsv.py  transform-ingestion-configs.py  transform_ingestion_configs.py  txt2annotations.py  unziptos3.py  yamlconverter.py
schema/: .version  Makefile  README.md  pyproject.toml  requirements.txt  schema.py
schema/v1.1.0/: Makefile  README.md  api_models.yaml  api_models_materialized.yaml  common.yaml  dataset_config.yaml  dataset_config_field_excludelist.json  dataset_config_materialized.yaml  dataset_config_models.py  dataset_config_models.schema.json  dataset_config_models_extended.py  dataset_config_models_extended_network.py  dataset_config_models_network.py  dataset_config_validate.py  dataset_config_validate.yaml  dataset_config_validation_exclusions.json  metadata.yaml  metadata_materialized.yaml  metadata_models.py  metadata_models.pyclear  requirements.txt  schema.py  valid_parent_filters.json
schema/v2.0.0/: README.md  dataset_config.yaml  metadata.yaml  metadata_materialized.yaml  metadata_models.py  requirements.txt
(+1698 files in other folders)
