[project]
name = "schema_manager"
version = "1.0"
description = "Tools for managing schema of the CryoET Data Portal"
authors = [
    {name="CZI Imaging Team", email="cryoetdataportal@chanzuckerberg.com"},
]
license = { text = "MIT" }

[tool.poetry]
name = "schema_manager"
version = "1.0"
description = "Tools for managing schema of the CryoET Data Portal"
authors = [
    "CZI Imaging Team <cryoetdataportal@chanzuckerberg.com>"
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.11"
async-lru = "^2.0.4"
click = "^8.1.7"
linkml = "^1.9.6"
numpy = "^1.26.4"
pydantic = "^2.8.2"
typing-extensions = "^4.12.2"
pyyaml = "^6.0.1"
black = "^24.4.2"

[tool.black]
line-length = 120
target_version = ['py311']

[tool.ruff]
lint.select = [
    "E", "W",  # pycodestyle
    "F",  # pyflakes
    "B",  # bugbear
    "I",  # isort
    "N",  # pep8-naming
    "ASYNC",  # async
    "COM",  # commas
    "C4",  # comprehensions
    "DTZ",  # datetimez
    "ISC",  # implicit-str-concat
    "G",  # logging-format
    "T20",  # print
    "SIM",  # simplify
]
lint.ignore = [
    "E501",  # line too long
    "C408",  # rewrite empty built-ins as literals
    "T201",  # print statements.
    "DTZ007", # Datetime objects without timezones.
    "DTZ005", # More datetimes without timezones.
]
line-length = 120
target-version = "py311"

[tool.ruff.lint.isort]
known-first-party =["common"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
warn_unreachable = true
strict = true

[build-system]
requires = ["poetry-core==2.0.0"]
build-backend = "poetry.core.masonry.api"
